Commit: Fields Added

--- a/src/main/resources/templates/otherprofile.html
+++ b/src/main/resources/templates/otherprofile.html
@@ -120,6 +120,9 @@
                     <th><input type="text" div id="textBox" placeholder="Location" th:field="*{location}"/> Date Location</th>
                 </tr>
                 <tr>
+                    <th><input type="text" div id="textBox" placeholder="Location" th:field="*{bookFee}"/> Date Location</th>
+                </tr>
+                <tr>
                     <th><input type="text" div id="textBox" placeholder="Location" th:field="*{rating1}"/> Your rating of the date</th>
                 </tr>
                 <tr>
