--- a/src/main/resources/templates/otherprofile.html
+++ b/src/main/resources/templates/otherprofile.html
@@ -120,7 +120,7 @@
                     <th><input type="text" div id="textBox" placeholder="Location" th:field="*{location}"/> Date Location</th>
                 </tr>
                 <tr>
-                    <th><input type="text" div id="textBox" placeholder="Location" th:field="*{bookFee}"/> Date Location</th>
+                    <th><input type="text" div id="textBox" placeholder="Location" th:field="*{bookFee}"/> Booking Fee</th>
                 </tr>
                 <tr>
                     <th><input type="text" div id="textBox" placeholder="Location" th:field="*{rating1}"/> Your rating of the date</th>
@@ -289,18 +289,14 @@
 <script>
     var modal3 = document.getElementById('referModal');
 
-    // Get the button that opens the modal
     var btn3 = document.getElementById("referButton");
 
-    // Get the <span> element that closes the modal
     var span3 = document.getElementsByClassName("close3")[0];
 
-    // When the user clicks on the button, open the modal
     btn3.onclick = function() {
         modal3.style.display = "block";
     }
 
-    // When the user clicks on <span> (x), close the modal
     span3.onclick = function() {
         $("#referModal").removeClass("in");
         $(".modal-backdrop").remove();
@@ -308,7 +304,6 @@
         $("#referModal").removeData();
     }
 
-    // When the user clicks anywhere outside of the modal, close it
     window.onclick = function(event) {
         if (event.target == modal3) {
             modal3.style.display = "none";
@@ -319,18 +314,14 @@
 <script>
     var modal2 = document.getElementById('dateModal');
 
-    // Get the button that opens the modal
     var btn2 = document.getElementById("dateButton");
 
-    // Get the <span> element that closes the modal
     var span2 = document.getElementsByClassName("close2")[0];
 
-    // When the user clicks on the button, open the modal
     btn2.onclick = function() {
         modal2.style.display = "block";
     }
 
-    // When the user clicks on <span> (x), close the modal
     span2.onclick = function() {
         $("#dateModal").removeClass("in");
         $(".modal-backdrop").remove();
@@ -338,7 +329,6 @@
         $("#dateModal").removeData();
     }
 
-    // When the user clicks anywhere outside of the modal, close it
     window.onclick = function(event) {
         if (event.target == modal2) {
             modal2.style.display = "none";
@@ -349,18 +339,14 @@
 <script>
     var modal = document.getElementById('searchModal');
 
-    // Get the button that opens the modal
     var btn = document.getElementById("advSearchBtn");
 
-    // Get the <span> element that closes the modal
     var span = document.getElementsByClassName("close")[0];
 
-    // When the user clicks on the button, open the modal
     btn.onclick = function() {
         modal.style.display = "block";
     }
 
-    // When the user clicks on <span> (x), close the modal
     span.onclick = function() {
         $("#searchModal").removeClass("in");
         $(".modal-backdrop").remove();
@@ -368,7 +354,6 @@
         $("#searchModal").removeData();
     }
 
-    // When the user clicks anywhere outside of the modal, close it
     window.onclick = function(event) {
         if (event.target == modal) {
             modal.style.display = "none";
