--- a/src/main/resources/templates/searchresult.html
+++ b/src/main/resources/templates/searchresult.html
@@ -47,7 +47,6 @@
 
 <div id="searchModal" class="modal-fade" style="z-index:9999;" role="dialog";>
 
-    <!-- Modal content -->
     <div class="modal-content">
         <span class="close">&times;</span>
         <form action="search" th:action="@{/searchresult}" th:object="${searchParameters}" method="post">
@@ -111,29 +110,24 @@
   </table>
     </div><br>
     </p>
-    <!--<button type="button" class="btn btn-dark btn-lg" div id="button" href="">Register</button>-->
   </div>
 
 
 
-</div><!-- /.container -->
+</div>
 
 
 <script>
     var modal = document.getElementById('searchModal');
 
-    // Get the button that opens the modal
     var btn = document.getElementById("advSearchBtn");
 
-    // Get the <span> element that closes the modal
     var span = document.getElementsByClassName("close")[0];
 
-    // When the user clicks on the button, open the modal
     btn.onclick = function() {
         modal.style.display = "block";
     }
 
-    // When the user clicks on <span> (x), close the modal
     span.onclick = function() {
         $("#searchModal").removeClass("in");
         $(".modal-backdrop").remove();
@@ -141,13 +135,13 @@
         $("#searchModal").removeData();
     }
 
-    // When the user clicks anywhere outside of the modal, close it
     window.onclick = function(event) {
         if (event.target == modal) {
             modal.style.display = "none";
         }
     }
 </script>
+
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
