--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -190,12 +190,11 @@
         </form>
     </div><br>
     </p>
-    <!--<button type="button" class="btn btn-dark btn-lg" div id="button" href="">Register</button>-->
   </div>
 
 
 
-</div><!-- /.container -->
+</div>
 
 <script>
     function reloadPage(){
@@ -206,18 +205,14 @@
 <script>
     var modal = document.getElementById('searchModal');
 
-    // Get the button that opens the modal
     var btn = document.getElementById("advSearchBtn");
 
-    // Get the <span> element that closes the modal
     var span = document.getElementsByClassName("close")[0];
 
-    // When the user clicks on the button, open the modal
     btn.onclick = function() {
         modal.style.display = "block";
     }
 
-    // When the user clicks on <span> (x), close the modal
     span.onclick = function() {
         $("#searchModal").removeClass("in");
         $(".modal-backdrop").remove();
@@ -225,7 +220,6 @@
         $("#searchModal").removeData();
     }
 
-    // When the user clicks anywhere outside of the modal, close it
     window.onclick = function(event) {
         if (event.target == modal) {
             modal.style.display = "none";
